# kr_job_parser

./: .gitignore  README.md  data.json  jobapi.py  pyproject.toml  text.txt  vacancy.py
API_hh_sjob/: HeadHunterAPI.py  SuperJobAPI.py  jobapi.py
data/: vacancies.json  vacancies.xls
src/: DBManager.py  JobEditor.py  UserInterface.py  VacancyStorage.py  main.py  utils.py  vacancy.py
