[tool.poetry]
name = "kr-job-parser"
version = "0.1.0"
description = ""
authors = ["shishkin015 <shishkin015@gmail.com>"]
readme = "README.md"
packages = [{include = "kr_job_parser"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
